--- a/kinect_version/benFinder/config.ini
+++ b/kinect_version/benFinder/config.ini
@@ -3,3 +3,4 @@ background_depth=background_depth.png
 chart_fname=chart.png
 raw_image_fname=image_raw.png
 masked_image_fname=image_masked.png
+data_fname=benFinder_output.json
