--- a/kinect_version/benFinder/config.ini
+++ b/kinect_version/benFinder/config.ini
@@ -1,4 +1,7 @@
 [benFinder]
+debug=True
+working_directory=/home/graham/benFinder
+tmpdir=/tmp
 background_depth=background_depth.png
 chart_fname=chart.png
 raw_image_fname=image_raw.png
