Added config option for length of timeseries for analysis.  Changed size of markers for breaths to make it easier to see.

--- a/kinect_version/benFinder/config.ini
+++ b/kinect_version/benFinder/config.ini
@@ -7,3 +7,5 @@ chart_fname=chart.png
 raw_image_fname=image_raw.png
 masked_image_fname=image_masked.png
 data_fname=benFinder_output.json
+area_threshold=25000
+timeseries_length=900  ; frames
