--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ category_dir: /
 baseurl: /OpenSeizureDetector 
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: http://openseizuredetector.org.uk
+url: http://openseizuredetector.org.uk/OpenSeizureDetector
 
 #### Under the Hood Stuff #####
 
