Updated bentv_ui to have a camera and a fit detector mode, to allow the fit detector background image to be re-set using the button attached to the raspberry pi.

--- a/kinect_version/bentv/config.ini
+++ b/kinect_version/bentv/config.ini
@@ -1,6 +1,8 @@
 [bentv]
 debug:True
 gpioNo:14   ; This is the chip GPIO number, not the physical pin on the rpi.
+debounce_ms:100 ; ignore keypresses that are shorter than this length in ms.
+shortpress_ms:1000 ; short key presses are less than this value of ms.
 uname:operator  ; camera operator user name for position control
 passwd:operator ; camera operator password
 camAddr=http://192.168.1.24  ; the address of the camera
@@ -10,6 +12,7 @@ camMoveURL=preset.cgi?-act=goto&-status=1&-number=  ; the URL to move the camera
 benFinderServer:http://192.168.1.14
 benFinderPort:8080
 benFinderURL:jsonData
+benFinderBackgroundURL:saveBgImg
 
 
 
