Added regular saving of brightness timeseries and video of raw images for future analysis.

--- a/kinect_version/benFinder/config.ini
+++ b/kinect_version/benFinder/config.ini
@@ -11,3 +11,7 @@ area_threshold=15000
 timeseries_length=900  ; frames
 rate_alarm=2  ; alarm if breathing rate <= 2 breaths per minute
 rate_warn=4   ; warning if breathign rate <= 4 breaths per minute
+analysis_framecount=15 ; number of frames between carrying out full analysis.
+output_framecount = 900 ; number of frames between writing timeseries to disk.
+ts_fname=routine_output
+alarm_ts_fname=alarm_output
