--- a/kinect_version/bentv_android/AndroidManifest.xml
+++ b/kinect_version/bentv_android/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="uk.org.seizuredetector.bentv"
+    package="uk.org.openseizuredetector.bentv"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="uk.org.seizuredetector.bentv.MainActivity"
+            android:name="uk.org.openseizuredetector.bentv.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
