--- a/kinect_version/bentv_android/AndroidManifest.xml
+++ b/kinect_version/bentv_android/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="uk.org.openseizuredetector.bentv"
     android:versionCode="1"
     android:versionName="1.0" >
+  <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -12,10 +13,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        	>
+        >
         <activity
-            	    android:name="uk.org.openseizuredetector.bentv.MainActivity"
-            android:label="@string/app_name" >
+            android:name="uk.org.openseizuredetector.bentv.MainActivity"
+	    android:label="@string/app_name" 
+	    android:screenOrientation="landscape" 
+	    >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
