--- a/kinect_version/bentv_android/AndroidManifest.xml
+++ b/kinect_version/bentv_android/AndroidManifest.xml
@@ -25,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+	<activity
+	    android:name="uk.org.openseizuredetector.bentv.SettingsActivity"
+	    android:label="benTV Settings"
+	    android:parentActivityName="uk.org.openseizuredetector.bentv.MainActivity"
+	    >
+	</activity>
     </application>
 
 </manifest>
