Converted to use settings based on android Preferences interface.

--- a/kinect_version/bentv_android/AndroidManifest.xml
+++ b/kinect_version/bentv_android/AndroidManifest.xml
@@ -31,6 +31,12 @@
 	    android:parentActivityName="uk.org.openseizuredetector.bentv.MainActivity"
 	    >
 	</activity>
+	<activity
+	    android:name="uk.org.openseizuredetector.bentv.PrefActivity"
+	    android:label="benTV Settings"
+	    android:parentActivityName="uk.org.openseizuredetector.bentv.MainActivity"
+	    >
+	</activity>
     </application>
 
 </manifest>
