Added a 'view webcam' button to android action bar - doesn't work - mediaplayer gives a 'cannot play this video' message...

--- a/kinect_version/bentv_android/AndroidManifest.xml
+++ b/kinect_version/bentv_android/AndroidManifest.xml
@@ -31,6 +31,12 @@
 	    android:parentActivityName="uk.org.openseizuredetector.bentv.MainActivity"
 	    >
 	</activity>
+	<activity
+	    android:name="uk.org.openseizuredetector.bentv.WebCamActivity"
+	    android:label="WebCam Activity"
+	    android:parentActivityName="uk.org.openseizuredetector.bentv.MainActivity"
+	    >
+	</activity>
     </application>
 
 </manifest>
