--- a/kinect_version/benFinder/config.ini.template
+++ b/kinect_version/benFinder/config.ini.template
@@ -19,6 +19,7 @@ alarm_ts_fname=alarm_output
 camUname:operator  ; camera operator user name for position control
 camPasswd:operator ; camera operator password
 camAddr=http://192.168.1.24  ; the address of the camera
+camImgURL=tmpfs/auto.jpg     ; url of camera snapshot image.
 camMoveURL=preset.cgi?-act=goto&-status=1&-number=  ; the URL to move the camera 
 ;						    ; to a preset - preset number 
 ;						    ; appended to this URL.
