--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="uk.org.openseizuredetector"
       android:versionCode="1"
       android:versionName="1.0">
+  <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name" >
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
@@ -11,5 +12,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+	<service
+            android:name=".SdServer"
+            android:exported="false"/>    
     </application>
 </manifest> 
