--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -6,7 +6,9 @@
   <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name" >
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+		  
+		  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
