--- a/pebble_version/Android_Pebble_SD/ant.properties
+++ b/pebble_version/Android_Pebble_SD/ant.properties
@@ -15,3 +15,6 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 jar.libs.dir=lib
+java.source=7
+java.target=7
+
