--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -4,6 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
   <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application android:label="@string/app_name" >
         <activity android:name="MainActivity"
                   android:label="@string/app_name"
