--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application android:label="@string/app_name" >
         <activity android:name="MainActivity"
                   android:label="@string/app_name"
-		  android:icon="@drawable/icon48x48"
+		  android:icon="@drawable/star_of_life_48x48"
 		  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
