Added transfer of simplified spectrum between pebble watch and android phone.

--- a/pebble_version/Android_Pebble_SD/ant.properties
+++ b/pebble_version/Android_Pebble_SD/ant.properties
@@ -18,4 +18,6 @@ jar.libs.dir=lib
 java.source=7
 java.target=7
 asset.dir=assets
+key.store=/home/graham/Dropbox/osd-release-key.keystore
+key.alias=osd_key
 
