--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -5,7 +5,9 @@
       android:versionName="1.0">
   <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <application android:label="@string/app_name" >
+    <application android:label="@string/app_name" 
+		 android:icon="@drawable/star_of_life_48x48"
+		 >
         <activity android:name="MainActivity"
                   android:label="@string/app_name"
 		  android:icon="@drawable/star_of_life_48x48"
