--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -3,22 +3,27 @@
       package="uk.org.openseizuredetector"
       android:versionCode="1"
       android:versionName="1.0">
+  <uses-sdk android:minSdkVersion="11" />
   <uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <application android:label="@string/app_name" 
-		 android:icon="@drawable/star_of_life_48x48"
-		 >
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name"
-		  android:icon="@drawable/star_of_life_48x48"
-		  >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-	<service
-            android:name=".SdServer"
-            android:exported="false"/>    
-    </application>
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <application android:label="@string/app_name" 
+	       android:icon="@drawable/star_of_life_48x48"
+	       >
+    <activity android:name="MainActivity"
+              android:label="@string/app_name"
+	      android:icon="@drawable/star_of_life_48x48"
+	      >
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <service
+        android:name=".SdServer"
+        android:exported="false"/>    
+  </application>
 </manifest> 
+
+
+<!-- 	      android:uiOptions="splitActionBarWhenNarrow"
+-->
