--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -19,6 +19,11 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity android:name="PrefActivity"
+              android:label="OpenSeizureDetector Preferences"
+	      android:icon="@drawable/star_of_life_48x48"
+	      >
+    </activity>
     <service
         android:name=".SdServer"
         android:exported="false"/>    
