Started moving alarm monitoring for client app into separate service so it does not stop if someone closes app accidentally.

--- a/pebble_version/Android_SD_Client/AndroidManifest.xml
+++ b/pebble_version/Android_SD_Client/AndroidManifest.xml
@@ -24,6 +24,9 @@
 	      android:icon="@drawable/star_of_life_48x48"
 	      >
     </activity>
+    <service
+        android:name=".SdClientService"
+        android:exported="false"/>    
   </application>
 </manifest> 
 
