--- a/pebble_version/Android_SD_Client/AndroidManifest.xml
+++ b/pebble_version/Android_SD_Client/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.org.openseizuredetector.client"
-      android:versionCode="4"
-      android:versionName="1.3">
+      android:versionCode="5"
+      android:versionName="1.4a">
   <uses-sdk android:minSdkVersion="11" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
