--- a/pebble_version/Android_SD_Client/AndroidManifest.xml
+++ b/pebble_version/Android_SD_Client/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.org.openseizuredetector.client"
       android:versionCode="5"
-      android:versionName="1.4a">
+      android:versionName="1.4">
   <uses-sdk android:minSdkVersion="11" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
