Modified OpenSeizureDetector Locator to use the Goole Play Location API rather than the old Location API, as this does not work on some new phones...

--- a/pebble_version/Android_Locator/ant.properties
+++ b/pebble_version/Android_Locator/ant.properties
@@ -1,3 +1,4 @@
 key.store=/home/graham/Dropbox/osd-release-key.keystore
 key.alias=osd_key
+android.library.reference.1=../../../../../usr/local/Android/Sdk/extras/google/google_play_services/libproject/google-play-services_lib
 
