--- a/pebble_version/Android_Locator/AndroidManifest.xml
+++ b/pebble_version/Android_Locator/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.org.openseizuredetector.locator"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1a" >
 
-    <uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7"/>
+    <uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
@@ -33,6 +33,8 @@
                     "android.provider.Telephony.SMS_RECEIVED" /> 
             </intent-filter> 
         </receiver>
+	<meta-data android:name="com.google.android.gms.version"
+		   android:value="@integer/google_play_services_version" />
         
     </application>
 
