--- a/pebble_version/Android_Locator/AndroidManifest.xml
+++ b/pebble_version/Android_Locator/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.org.openseizuredetector.locator"
     android:versionCode="2"
-    android:versionName="1.1a" >
+    android:versionName="1.1" >
 
     <uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8"/>
     <uses-permission android:name="android.permission.INTERNET"/>
