--- a/pebble_version/Android_Pebble_SD/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.org.openseizuredetector"
-      android:versionCode="13"
-      android:versionName="1.10">
+      android:versionCode="14"
+      android:versionName="1.11a">
   <uses-sdk android:minSdkVersion="11" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
