--- a/pebble_version/Android_Pebble_SD_AS/app/src/main/AndroidManifest.xml
+++ b/pebble_version/Android_Pebble_SD_AS/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.org.openseizuredetector"
-      android:versionCode="14"
-      android:versionName="1.11a">
+      android:versionCode="15"
+      android:versionName="1.11b">
   <uses-sdk android:minSdkVersion="11" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
   <application android:label="@string/app_name" 
 	       android:icon="@drawable/star_of_life_48x48"
 	       >
