Simple threshold based fall detector added to pebble seizure detector.

--- a/pebble_version/Android_Pebble_SD_AS/local.properties
+++ b/pebble_version/Android_Pebble_SD_AS/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 24 20:01:13 BST 2015
+#Mon Nov 09 19:12:29 GMT 2015
+ndk.dir=/usr/local/android-sdk-linux/ndk-bundle
 sdk.dir=/usr/local/android-sdk-linux
